[package]
name = "genpass"
version = "0.4.13"
authors = ["Cyryl Płotnicki <cyplo@cyplo.net>"]
description = "A simple yet robust commandline random password generator."
repository = "https://git.sr.ht/~cyplo/genpass"
license = "AGPL-3.0"
readme = "README.md"
edition = "2018"
build = "build.rs"

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
bitflags = "1.2"
rand = "0.8"
structopt = "0.3"
eff-wordlist = "1.0"

[dev-dependencies]
proptest = "1"
zxcvbn = "2"
assert_cmd = "1"
predicates = "1"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["run-for-all", "prepush-hook", "run-cargo-test", "run-cargo-clippy", "run-cargo-fmt"]

[build-dependencies.built]
version = "0.4"
features = ["git2", "chrono"]
